fix: code block wrapping

--- a/public/theme/bulma/css/paste.css
+++ b/public/theme/bulma/css/paste.css
@@ -256,3 +256,8 @@ button.button--no-style {
 .captcha_container i {
     color: black;
 }
+
+code {
+    overflow-wrap: anywhere;
+    white-space: pre-wrap;
+}
